<resources>
    <string name="app_name">CeilingSet</string>
    <string name="title_size_ansver">Set the size of the ceiling in meters </string>
    <string name="title_area">Total area:</string>
    <string name="title_cd_step">The step ceiling profile:</string>
    <string name="title_panel_size">The size of the sheets of drywall:</string>
    <string name="title_panel_layers">The number of layers of drywall</string>
    <string name="title_ud">Edge profile (ud-28): </string>
    <string name="title_cd">Ceiling profile (сd-27/60):</string>
    <string name="title_locks">Cross connector (cd-09):</string>
    <string name="title_suspends">Suspend (cd-14):</string>
    <string name="title_connecter">Connector (cd-01):</string>
    <string name="title_panels">Drywall:</string>
    <string name="title_screw_wall">Wall fasteners(screws, dowels)</string>
    <string name="title_screw_ceiling">Ceiling fasteners(screws, dowels)</string>
    <string name="title_self_tapping_screw"> Self-tapping srews for wood</string>
    <string name="title_screw_on_concrete">Screws on concrete</string>
    <string name="title_screw_panel">Drywall screws</string>
    <string name="sub_title_size_3">Long 3 meter:</string>
    <string name="sub_title_size_4">Long 4 meter:</string>
    <string name="x_side">Long</string>
    <string name="y_side">Width</string>
    <string name="calculate_order">Count</string>
    <string name="seiling_list_title">List of ceilings</string>
    <string name="new_ceiling">To calculate the new ceiling</string>
    <string name="delete_string">To remove</string>
    <string name="locale_area">%.2f m2</string>
    <string name="format_cd_step_string">%d mm</string>
    <string name="format_panel_size_string">%d mm * 1200 mm</string>
    <string name="eror_dialog_title">Input error</string>
    <string name="error_dialog_textview">Width and long of the ceiling may not be less than 600mm</string>
    <string name="calculator_button_text">To calculate the new ceiling</string>
    <string name="empty_list_text">The list is empty</string>
    <string name="cd_name">CD-27/60</string>
    <string name="ud_name">UD-28</string>
    <string name="suspend_name">Suspend</string>
    <string name="lock_name">Cross connector</string>
    <string name="panel_name">Drywall</string>
    <string name="potolok_string">Ceiling</string>
    <string name="dialog_rename_title">Enter the name of the ceiling</string>
    <string name="send_string">Send</string>
    <string name="message_string">%1$s:\nCeiling profile(Cd 27/60):\n%2$s\nEdge profile(Ud 28) - %3$s\nSuspends - %4$s\nCross connectors - %5$s\nDrywalls:\n%6$s\nConnectors - %7$s\n%8$s\nDrywall screws:\n%9$s</string>
    <string name="send_report">Send the calculation of the ceiling</string>
    <string name="rename">To change the name</string>
    <string name="sizes_title">The dimensions of the ceiling:</string>
    <string name="string_m">M</string>
    <string name="cd60_size_title">Long ceiling profile(CD-27/60):</string>
    <string name="cd60_step_title">The step ceiling profile(СD-27/60):</string>
    <string name="size_3_meter_string">3 meters</string>
    <string name="size_4_meter_string">4 meters</string>
    <string name="size_300_mm_string">300 mm</string>
    <string name="size_400_mm_string">400 mm</string>
    <string name="size_600_mm_string">600 mm</string>
    <string name="panel_size_titel">Long drywall (мм):</string>
    <string name="size_1200_2200">2200  </string>
    <string name="size_1200_2500">2500  </string>
    <string name="size_1200_3000">3000  </string>
    <string name="panel_layer_1">1 layer</string>
    <string name="panel_layer_2">2 layers</string>
    <string name="dont_view_again">do not show again</string>
    <string name="calc_info_dialog_text">If you choose two long frame, the application will automatically choose the optimum length with minimum waste, for the ceiling.</string>
    <string name="ceiling_default_name"> Ceiling</string>
    <string name="description_string">Description</string>
    <string name="steel_profile_title">Steel Profiles</string>
    <string name="fixigs_title">Fixings</string>
    <string name="screws_title">Screws</string>
    <string name="material_concrete">Concrete</string>
    <string name="material_wood">Wood</string>
    <string name="material_drywall">Drywall</string>
    <string name="title_wall_material">materyal room walls</string>
    <string name="title_ceiling_material">materyal ceiling base</string>
    <string name="dw_screw_size_25mm">Long: 25mm</string>
    <string name="dw_screw_size_40mm">Long: 40mm</string>
    <string name="drywalscrews_description">for mounting edge profile\nto the drywall wall\nneed to get\n to the wall profile</string>
    <string name="banner_ad_unit_id">ca-app-pub-2022458523105829/9912612024</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-2022458523105829/4720109064</string>
    <plurals name="plurals_piece">
        <item quantity="zero">%1$d pieces</item>
        <item quantity="one">%1$d piece</item>
        <item quantity="two">%1$d pieces</item>
        <item quantity="few">%1$d pieces</item>
        <item quantity="many">%1$d pieces</item>
        <item quantity="other">%1$d pieces</item>
    </plurals>


</resources>

