<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:title="@string/delete_string"
      android:icon="@drawable/ic_delete_name"
      android:id="@+id/delete_botton_set_menu"
      app:showAsAction="always"/>
    <item android:title="@string/send_string"
          android:icon="@drawable/ic_send_menu"
          android:id="@+id/send_button_set_menu"
        app:showAsAction="always"/>
    <item android:title="@string/rename"
          android:icon="@drawable/rename_menu"
          android:id="@+id/rename_button_set_menu"
          app:showAsAction="always"/>
    <item android:title="@string/new_ceiling"
          android:icon="@drawable/ic_menu_add"
          android:id="@+id/new_button_set_menu"
          app:showAsAction="always"/>
</menu>