<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardElevation="10dp"
            android:layout_weight="1"
            android:layout_margin="8dp"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_size_ansver"
                style="?android:listSeparatorTextViewStyle"/>


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,2"
                android:padding="16dp">
                <TableRow>
                    <EditText
                        android:id="@+id/edit_X"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/x_side"
                        android:inputType="phone"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/string_m"
                        android:paddingTop="10dp"
                        android:textStyle="bold"
                        style="@style/NormalTextSize"/>

                    <EditText
                        android:id="@+id/edit_Y"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/y_side"
                        android:inputType="phone"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/string_m"
                        android:paddingTop="10dp"
                        android:textStyle="bold"
                        style="@style/NormalTextSize"/>
                </TableRow>
            </TableLayout>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardElevation="10dp"
                    card_view:cardBackgroundColor="@color/light_gray"
                    card_view:cardCornerRadius="8dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cd60_size_title"
                            style="?android:listSeparatorTextViewStyle"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <CheckBox
                                android:id="@+id/checkbox_cd_size_3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="24dp"
                                android:checked="true"
                                android:text="@string/size_3_meter_string"
                                android:layout_weight="1" />

                            <CheckBox
                                android:id="@+id/checkbox_cd_size_4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/size_4_meter_string"
                                android:layout_marginLeft="24dp"
                                android:layout_weight="1" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardElevation="10dp"
                    card_view:cardBackgroundColor="@color/light_gray"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cd60_step_title"
                            style="?android:listSeparatorTextViewStyle"/>

                        <RadioGroup
                            android:id="@+id/cd_step_radio_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <RadioButton
                                android:id="@+id/radiobotton_cd_step_300"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="24dp"
                                android:text="@string/size_300_mm_string"
                                android:layout_weight="1" />
                            <RadioButton
                                android:id="@+id/radiobotton_cd_step_400"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="24dp"
                                android:checked="true"
                                android:text="@string/size_400_mm_string"
                                android:layout_weight="1" />
                            <RadioButton
                                android:id="@+id/radiobotton_cd_step_600"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="24dp"
                                android:text="@string/size_600_mm_string"
                                android:layout_weight="1" />
                        </RadioGroup>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardElevation="10dp"
                    card_view:cardBackgroundColor="@color/light_gray"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/panel_size_titel"
                            style="?android:listSeparatorTextViewStyle"/>

                        <RadioGroup
                            android:id="@+id/panel_sizes_radio_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <RadioButton
                                android:id="@+id/radiobotton_Panel_size_2200"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="24dp"
                                android:text="@string/size_1200_2200"
                                android:layout_weight="1" />
                            <RadioButton
                                android:id="@+id/radiobotton_Panel_size_2500"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="24dp"
                                android:checked="true"
                                android:text="@string/size_1200_2500"
                                android:layout_weight="1" />
                            <RadioButton
                                android:id="@+id/radiobotton_Panel_size_3000"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="24dp"
                                android:text="@string/size_1200_3000"
                                android:layout_weight="1" />
                        </RadioGroup>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardElevation="10dp"
                    card_view:cardBackgroundColor="@color/light_gray"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_panel_layers"
                            style="?android:listSeparatorTextViewStyle"
                            android:id="@+id/textView4"/>

                        <RadioGroup
                            android:id="@+id/panel_layers_radio_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <RadioButton
                                android:id="@+id/radiobotton_Panel_layer_1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="24dp"
                                android:checked="true"
                                android:text="@string/panel_layer_1"
                                android:layout_weight="1" />
                            <RadioButton
                                android:id="@+id/radiobotton_Panel_layer_2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="24dp"
                                android:text="@string/panel_layer_2"
                                android:layout_weight="1" />

                        </RadioGroup>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardElevation="10dp"
                    card_view:cardBackgroundColor="@color/light_gray"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_wall_material"
                            style="?android:listSeparatorTextViewStyle"
                            android:id="@+id/textView5"/>
                        <RadioGroup
                            android:id="@+id/wall_base_material_radiogroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="10dp">
                            <RadioButton
                                android:id="@+id/radiobotton_wall_concrete"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/material_concrete"
                                android:layout_weight="1" />
                            <RadioButton
                                android:id="@+id/radiobotton_wall_wood"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/material_wood"
                                android:layout_weight="1" />
                            <RadioButton
                                android:id="@+id/radiobotton_wall_drywall"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/material_drywall"
                                android:layout_weight="1" />

                        </RadioGroup>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardElevation="10dp"
                    card_view:cardBackgroundColor="@color/light_gray"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_ceiling_material"
                            style="?android:listSeparatorTextViewStyle"
                            android:id="@+id/textView_6"/>
                        <RadioGroup
                            android:id="@+id/ceiling_base_material_radiogroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="10dp">
                            <RadioButton
                                android:id="@+id/radiobotton_ceiling_concrete"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/material_concrete"
                                android:layout_weight="1" />
                            <RadioButton
                                android:id="@+id/radiobotton_ceiling_wood"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/material_wood"
                                android:layout_weight="1" />
                        </RadioGroup>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <Button
                    android:text="@string/calculate_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:id="@+id/calculate_order_button"
                    android:layout_alignParentBottom="true"/>
            </LinearLayout>

    </android.support.v7.widget.CardView>
</ScrollView>
